# Sand_Rogue

./: .gitignore  CMakeLists.txt  README.md  main.c
Resource/GLSL/: ColorShader.fs  ColorShader.vs  Color_Fragment.shader  Color_Vertex.shader
Resource/Models/: Monster_Manual
Resource/Models/Ascii_3D/: C.mtl
Source/: Common.h  Sand_Dice.h
Source/Core/: Dungeon_Level.c  Dungeon_Level.h  Game_Objects.c  Game_Objects.h  Main_Game_Loop.c  Main_Game_Loop.h  Map.c  Map.h  Sand_Vector.c  Sand_Vector.h  Text_File_Utils.c  Text_File_Utils.h
Source/GURPS/: Injuries_Healing.c  Injuries_Healing.h  Items_Fixtures.c  Items_Fixtures.h  Monster_AI.c  Monster_AI.h  Monsters.c  Monsters.h  Sand_Combat.c  Sand_Combat.h  Sand_Damage.c  Sand_Damage.h
Source/Graphical_User_Interface/: User_Input.c  User_Input.h
Source/OpenGL/: Load_Model_3D.c  Load_Model_3D.h  Rendering.c  Rendering.h  Sand_Floor_Tile_3D.c  Sand_Floor_Tile_3D.h  Sand_Window_3D.c  Sand_Window_3D.h  Shaders.c  Shaders.h
Source/Sand_Maths/: Matrix_Utils.c  Matrix_Utils.h
